# auramed

./: .gitignore  README.md  docker-compose.yml  implementation plan.md  pyproject.toml  sql_app.db  tasks.md
.github/workflows/: deploy.yml  lint.yml  tests.yml
backend/: .env  .env.example  Dockerfile  add_avatar_url.py  check_db.py  debug_log.txt  migrate_statuses.py  populate_pharmacy_data.py  pyproject.toml  test_serialize.py  test_update.py  token.json
backend/app/: create_db.py  init_mysql.py  initial_data.py  main.py  reset_db_mysql.py  seed_demo.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: appointments.py  billing.py  clinic_settings.py  diagnostics.py  login.py  patients.py  pharmacy.py  reports.py  role_permissions.py  treatments.py  upload.py  users.py  visits.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py
backend/app/models/: appointment.py  bill.py  clinic_settings.py  diagnostic.py  drug.py  drug_category.py  patient.py  prescription.py  role_permission.py  treatment.py  user.py  visit.py
backend/app/schemas/: appointment.py  bill.py  clinic_settings.py  diagnostic.py  drug.py  drug_category.py  patient.py  prescription.py  role_permission.py  treatment.py  user.py  visit.py
backend/app/utils/: email.py
backend/app/utils/email-templates/: reset_password.html
backend/scripts/: add_patient_doctor.py
frontend/: .env  .env.example  index.html  package-lock.json  package.json
requirement-docs/: Small_Clinic_Database HBS.xlsx  excel_columns.txt  requirements_text.txt
(+32 files in other folders)
